--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -50,6 +50,6 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.5.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "4.3.2"
+    "typescript": "^4.4.2"
   }
 }
