feat: backend updates

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -2,9 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "rk9 webapp backend service",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "npm run clean && npm run compile && node dist/src/index.js",
+    "start": "npm run clean && npm run compile && nodemon src/index.ts",
     "dev": "ts-node-dev ./src/index.ts",
     "build": "npm run clean && npm run compile",
     "clean": "rimraf dist && rimraf build",
@@ -17,11 +17,14 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^6.0.0-alpha.3",
+    "@types/lodash": "^4.14.181",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.2.0",
+    "lodash": "^4.17.21",
+    "mongodb": "^4.5.0",
     "mongoose": "^6.0.5",
     "needle": "^3.0.0",
     "nodemon": "^2.0.15",
