--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -24,10 +24,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.2.0",
+    "express-fileupload": "^1.4.0",
     "lodash": "^4.17.21",
     "mongodb": "^4.5.0",
     "mongoose": "^6.0.5",
-    "multer": "^1.4.5-lts.1",
     "needle": "^3.0.0",
     "nodemon": "^2.0.15",
     "p-iteration": "^1.1.8",
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.2.2",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "@types/needle": "^2.5.3",
