--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -18,26 +18,33 @@
   "dependencies": {
     "@faker-js/faker": "^6.3.1",
     "@google-cloud/storage": "^6.0.1",
-    "@types/lodash": "^4.14.181",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.2.0",
     "express-fileupload": "^1.4.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongodb": "^4.5.0",
     "mongoose": "^6.0.5",
     "needle": "^3.0.0",
     "nodemon": "^2.0.15",
     "p-iteration": "^1.1.8",
+    "role-acl": "^4.5.4",
     "xlsx": "^0.18.2",
     "zod": "^3.11.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.2.2",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/lodash": "^4.14.182",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "@types/needle": "^2.5.3",
