--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@casl/ability": "^5.4.4",
+    "@casl/react": "^3.0.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -17,6 +19,7 @@
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
+    "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "lottie-react": "^2.1.0",
     "notistack": "^2.0.3",
@@ -39,6 +42,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
+    "@types/js-cookie": "^3.0.2",
     "@types/lodash": "^4.14.178",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
